# gamenastix-xbox-controller

./: .gitmodules  CMakeLists.txt  README.md  build.sh  reset.py
promicro-project/: promicro-project.ino
snoo-cue-sensor/: SensorFusion.cpp  SensorFusion.h  protocol.c  protocol_debug.c  snoo-cue-sensor.ino
src/: promicro-project.cpp  snoo-cue-sensor.cpp  treadmill-t2-controller.cpp
treadmill-t2-controller/: biomechanical_state.c  biomechanical_state.h  treadmill-t2-controller.ino  xinput_loop.c  xinput_loop.h
